--- a/src/templates/dashboard/estudiante.html
+++ b/src/templates/dashboard/estudiante.html
@@ -13,6 +13,9 @@
 <li><a href="{% url 'usuario:gestionar_tutores' %}"><i class="fa-solid fa-chalkboard-teacher"></i> Mis Tutores</a></li>
 <li><a href="{% url 'usuario:mi_progreso' %}"><i class="fa-solid fa-chart-line"></i> Mi Progreso</a></li>
 <li><a href="{% url 'usuario:mi_perfil' %}"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
+{% if es_mayor_de_edad %}
+<li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
+{% endif %}
 {% endblock %}
 
 {% block content %}
