--- a/src/templates/usuario/editar_perfil.html
+++ b/src/templates/usuario/editar_perfil.html
@@ -29,6 +29,8 @@
     {% if es_admin_completo %}
     <li><a href="{% url 'administracion:docentes_cursos' %}"><i class="fa-solid fa-chalkboard-teacher"></i> Docentes y Cursos</a></li>
     {% endif %}
+    <li><a href="{% url 'empresas:mesa_entrada_list' %}"><i class="fa-solid fa-building"></i> Solicitudes Empresas</a></li>
+    <li><a href="{% url 'empresas:gestion_empresas' %}"><i class="fa-solid fa-building"></i> Gestión Empresas</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
     {% if es_admin_completo %}
     <li><a href="{% url 'admin:index' %}"><i class="fa-solid fa-cogs"></i> Django Admin</a></li>
@@ -41,6 +43,9 @@
     <li><a href="{% url 'administracion:materiales_docente' %}"><i class="fa-solid fa-folder-open"></i> Materiales</a></li>
     <li><a href="{% url 'administracion:estudiantes_docente' %}"><i class="fa-solid fa-users"></i> Estudiantes</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
+    {% if persona.es_mayor_de_edad %}
+    <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
+    {% endif %}
 {% else %}
     {# Menú para Estudiantes y otros usuarios #}
     <li><a href="{% url 'dashboard_estudiante' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
@@ -55,6 +60,9 @@
     {# <li><a href="{% url 'usuario:materiales_estudiante' %}"><i class="fa-solid fa-folder-open"></i> Materiales</a></li> #}
     {% endif %}
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
+    {% if persona.es_mayor_de_edad %}
+    <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
+    {% endif %}
 {% endif %}
 {% endblock %}
 
