--- a/src/templates/usuario/mi_perfil.html
+++ b/src/templates/usuario/mi_perfil.html
@@ -14,6 +14,8 @@
     <li><a href="{% url 'administracion:panel_comisiones' %}"><i class="fa-solid fa-users-rectangle"></i> Gestión Comisiones</a></li>
     {% endif %}
     <li><a href="{% url 'administracion:panel_inscripciones' %}"><i class="fa-solid fa-clipboard-list"></i> Inscripciones</a></li>
+    <li><a href="{% url 'empresas:mesa_entrada_list' %}"><i class="fa-solid fa-building"></i> Solicitudes Empresas</a></li>
+    <li><a href="{% url 'empresas:gestion_empresas' %}"><i class="fa-solid fa-building"></i> Gestión Empresas</a></li>
     {% if es_admin_completo %}
     <li><a href="{% url 'administracion:gestion_usuarios' %}"><i class="fa-solid fa-users-cog"></i> Gestión Usuarios</a></li>
     {% endif %}
@@ -40,6 +42,9 @@
     <li><a href="{% url 'administracion:materiales_docente' %}"><i class="fa-solid fa-folder-open"></i> Materiales</a></li>
     <li><a href="{% url 'administracion:estudiantes_docente' %}"><i class="fa-solid fa-users"></i> Estudiantes</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
+    {% if persona.es_mayor_de_edad %}
+    <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
+    {% endif %}
 {% else %}
     {# Menú para Estudiantes y otros usuarios #}
     <li><a href="{% url 'dashboard_estudiante' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
@@ -54,6 +59,9 @@
     {# <li><a href="{% url 'usuario:materiales_estudiante' %}"><i class="fa-solid fa-folder-open"></i> Materiales</a></li> #}
     {% endif %}
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
+    {% if persona.es_mayor_de_edad %}
+    <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
+    {% endif %}
 {% endif %}
 {% endblock %}
 
