se agrega la gestion y creacion de empresas 2 navbar

--- a/src/templates/administracion/crear_usuario.html
+++ b/src/templates/administracion/crear_usuario.html
@@ -80,6 +80,12 @@
                     </label>
                 </div>
                 <div class="tipo-usuario-option">
+                    <input type="radio" name="tipo_usuario" value="empresa" id="tipo_empresa">
+                    <label for="tipo_empresa" class="tipo-usuario-label">
+                        <div class="title">Empresa</div>
+                    </label>
+                </div>
+                <div class="tipo-usuario-option">
                     <input type="radio" name="tipo_usuario" value="mesa_entrada" id="tipo_mesa_entrada">
                     <label for="tipo_mesa_entrada" class="tipo-usuario-label">
                         <div class="title">Mesa de Entrada</div>
