--- a/src/templates/administracion/editar_usuario.html
+++ b/src/templates/administracion/editar_usuario.html
@@ -137,6 +137,7 @@
                 <select name="nuevo_rol" id="nuevo_rol">
                     <option value="">Mantener rol actual</option>
                     <option value="estudiante">Estudiante</option>
+                    <option value="empresa">Empresa</option>
                     <!-- <option value="docente">Docente</option> OCULTO TEMPORALMENTE -->
                     <option value="admin">Administrador</option>
                     <option value="mesa_entrada">Mesa de Entrada</option>
