--- a/src/templates/cursos_por_polo.html
+++ b/src/templates/cursos_por_polo.html
@@ -702,6 +702,9 @@
             <div class="navbar-links">
                 <a href="{% url 'landing' %}" class="navbar-link">Inicio</a>
                 <a href="{% url 'lista_polos' %}" class="navbar-link">Cursos</a>
+                {% if user.is_authenticated and es_empresa %}
+                <a href="{% url 'empresas:mi_empresa' %}" class="navbar-link">Punto Empresarial</a>
+                {% endif %}
                 <a href="#" class="navbar-link" onclick="openContactoModal(); return false;">Contacto</a>
                 <a href="#" class="navbar-link" onclick="openAcercaDeModal(); return false;">Acerca de</a>
             </div>
@@ -1014,6 +1017,14 @@
                     <div class="form-group">
                         <label>Apellidos *</label>
                         <input type="text" name="apellido" required placeholder="Apellidos" class="form-input">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Registrarme como *</label>
+                        <select name="tipo_usuario" class="form-input" required>
+                            <option value="estudiante" selected>Estudiante</option>
+                            <option value="empresa">Empresa / Emprendedor</option>
+                        </select>
                     </div>
 
                     <!-- Teléfono -->
