--- a/src/templates/usuario/cambiar_contrasena.html
+++ b/src/templates/usuario/cambiar_contrasena.html
@@ -42,16 +42,15 @@
     <li><a href="{% url 'administracion:materiales_docente' %}"><i class="fa-solid fa-folder-open"></i> Materiales</a></li>
     <li><a href="{% url 'administracion:estudiantes_docente' %}"><i class="fa-solid fa-users"></i> Estudiantes</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
-    {% if persona.es_mayor_de_edad %}
+{% elif es_empresa %}
+    {# Menú para Empresas #}
+    <li><a href="{% url 'dashboard_empresa' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
+    <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
     <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
-    {% endif %}
 {% else %}
     {# Menú para Estudiantes y otros usuarios #}
     <li><a href="{% url 'dashboard_estudiante' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
-    {% if persona.es_mayor_de_edad %}
-    <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
-    {% endif %}
 {% endif %}
 {% endblock %}
 
