--- a/src/templates/usuario/editar_perfil.html
+++ b/src/templates/usuario/editar_perfil.html
@@ -43,9 +43,11 @@
     <li><a href="{% url 'administracion:materiales_docente' %}"><i class="fa-solid fa-folder-open"></i> Materiales</a></li>
     <li><a href="{% url 'administracion:estudiantes_docente' %}"><i class="fa-solid fa-users"></i> Estudiantes</a></li>
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
-    {% if persona.es_mayor_de_edad %}
+{% elif es_empresa %}
+    {# Menú para Empresas #}
+    <li><a href="{% url 'dashboard_empresa' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
+    <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
     <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
-    {% endif %}
 {% else %}
     {# Menú para Estudiantes y otros usuarios #}
     <li><a href="{% url 'dashboard_estudiante' %}"><i class="fa-solid fa-home"></i> Inicio</a></li>
@@ -60,9 +62,6 @@
     {# <li><a href="{% url 'usuario:materiales_estudiante' %}"><i class="fa-solid fa-folder-open"></i> Materiales</a></li> #}
     {% endif %}
     <li><a href="{% url 'usuario:mi_perfil' %}" class="active"><i class="fa-solid fa-user"></i> Mi Perfil</a></li>
-    {% if persona.es_mayor_de_edad %}
-    <li><a href="{% url 'empresas:mi_empresa' %}"><i class="fa-solid fa-building"></i> Mi Empresa / Startup</a></li>
-    {% endif %}
 {% endif %}
 {% endblock %}
 
@@ -158,7 +157,7 @@
         </div>
 
         <!-- Información Académica/Profesional -->
-        {% if es_estudiante %}
+        {% if es_estudiante and not es_empresa %}
         <div class="form-section">
             <h3 class="section-title">
                 Información Académica
